Solve the overflow
Solve the overflow

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <title>有 朋友</title>
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
     <style>
+        html, body{
+    
+            overflow-x: hidden;
+        }
         #container-fluid {
             background-image: url(img/back/102b543001f2bce616314cb58abbac28.jpg);
             background-attachment: fixed;
@@ -225,8 +229,6 @@
                     幹話滿滿、神射手、搞笑、喜歡唱歌<br>
                     非常的美麗 很搞笑 嘴巴很甜<br>
                     尻尻真的世界幹話好笑<br>
-
-
                 </p>
             </div>
         </div>
