--- a/special.html
+++ b/special.html
@@ -9,6 +9,10 @@
     <title>設計組</title>
     <link rel="stylesheet" href="bootstrap-4.3.1-dist/css/bootstrap-grid.min.css">
     <style>
+        html, body{
+    
+            overflow-x: hidden;
+        }
         #container-fluid {
             /*background-color: floralwhite;*/
             background-image: url(img/back/back2.jpg);
