解決手機板圖片偏移

--- a/2101.html
+++ b/2101.html
@@ -48,7 +48,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            text-align: center;
         }
 
         .qq {
@@ -136,10 +136,10 @@
 
         </div>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/chang/chang3.jpg" onmouseover="this.src='img/chang/chang2.jpg';" onmouseout="this.src='img/chang/chang3.jpg';" width="400px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/chang/chang3.jpg" onmouseover="this.src='img/chang/chang2.jpg';" onmouseout="this.src='img/chang/chang3.jpg';" width="400px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/lillayuki/?hl=zh-tw" target="_blank">點我看更多蔥蔥</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 鍾蕙謙<br><strong>綽號</strong> : 蔥蔥或是大夢<br><strong>生日</strong> : 1999/09/18<br><strong>血型</strong> : O型<br><strong>星座</strong> : 處女座<br><strong>興趣</strong> : 看書(散文、新詩)<br><strong>簡短自我介紹 : </strong><br>我是鍾蕙謙，可以叫我蔥蔥，因為之前有人把蕙看成蔥，<br>所以我就把它拿來當綽號了，我很喜歡看書，書桌上有個櫃子，<br>都被我擺滿書了，我還是會繼續買繼續看，我也很喜歡練字 <br><strong>別人眼中的她</strong> : <br>
                     很會忍耐，看起來堅強其實包裝了很多的軟弱，<br>
                     很勇敢也很努力在活出自己想要的樣子、人緣很好（正面的）<br>
@@ -153,10 +153,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/yunchi/yunchi4.jpg" onmouseover="this.src='img/yunchi/yunchi1.jpg';" onmouseout="this.src='img/yunchi/yunchi4.jpg';" width="400px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/yunchi/yunchi4.jpg" onmouseover="this.src='img/yunchi/yunchi1.jpg';" onmouseout="this.src='img/yunchi/yunchi4.jpg';" width="400px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/yunchi_0916/?hl=zh-tw" target="_blank">點我看更多小棋</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 黃筠棋<br><strong>綽號</strong> : 黃小棋<br><strong>生日</strong> : 1999/09/16<br><strong>血型</strong> : B型<br><strong>星座</strong> : 處女座<br><strong>興趣</strong> : 看電影、看劇<br><strong>簡短自我介紹</strong> : <br>我是黃筠棋，資傳科技組，黃亮庭跟吳育欣的室友。<br>不擅交際也不喜歡社交，平常最喜歡一個人聽音樂想事情，<br>偶爾看看劇、看看電影，或是來一場隨心所欲的旅行。<br><strong>別人眼中的她</strong> : <br>
                     台中人 少數資傳台中人好碰友<br>
                     網美，在帶禱告的時候像變了一個人，超會講話<br>
