--- a/boyA.html
+++ b/boyA.html
@@ -53,7 +53,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            text-align: center;
         }
 
         .navbar {
@@ -137,10 +137,10 @@
 
         </div>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/shinyiya/shinyiya2.jpg" onmouseover="this.src='img/shinyiya/shinyiya1.jpg';" onmouseout="this.src='img/shinyiya/shinyiya2.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/shinyiya/shinyiya2.jpg" onmouseover="this.src='img/shinyiya/shinyiya1.jpg';" onmouseout="this.src='img/shinyiya/shinyiya2.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/shin_yi_ya/?hl=zh-tw" target="_blank">點我看更多信德</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 何信億<br><strong>綽號</strong> : 信德<br><strong>生日</strong> : 1999/12/06<br><strong>血型</strong> : A型<br><strong>星座</strong> : 射手座<br><strong>興趣</strong> : 排球 做夢 說夢話<br><strong>簡短自我介紹</strong> : <br>我是個安靜沈默正直的男生 每天都很安靜的待在教室上課<br>我從不蹺課 我還很節儉 我只有偶爾會打排球 我是個認真的人 尤其是創意方法的時候<br>我都很認真的討論<br><strong>別人眼中的他</strong> : <br>
                     飆車好碰友 飆仔 帶操候選人二號<br>
                     瘦到夭壽的竹竿人 資傳歌王 台幣戰士外加中二肥宅的八德飆仔<br>
@@ -154,10 +154,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/max/dog1.jpg" onmouseover="this.src='img/max/max3.jpg';" onmouseout="this.src='img/max/dog1.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/max/dog1.jpg" onmouseover="this.src='img/max/max3.jpg';" onmouseout="this.src='img/max/dog1.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/max890101/?hl=zh-tw" target="_blank">點我看更Max</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
 
                 <p class="qq"><strong>姓名</strong> : 楊子頤<br><strong>綽號</strong> : Max<br><strong>生日</strong> : 2000/01/01<br><strong>血型</strong> : B型<br><strong>星座</strong> : 摩羯座<br><strong>興趣</strong> : 打排球<br><strong>簡短自我介紹</strong> :<br> 大頭好可愛 大頭好可愛 大頭好可愛 大頭好可愛 大頭好可愛<br>大頭好可愛 大頭好可愛 大頭好可愛 大頭好可愛 大頭好可愛 大頭好可愛 大頭好可愛<br><strong>別人眼中的他</strong> : <br>
                     宜蘭三星蔥好碰友<br>
