--- a/boyB.html
+++ b/boyB.html
@@ -54,7 +54,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            text-align: center;
         }
 
         .navbar {
@@ -138,10 +138,10 @@
 
         </div>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/morris1/morris2.jpg" onmouseover="this.src='img/morris1/morris1.jpg';" onmouseout="this.src='img/morris1/morris2.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/morris1/morris2.jpg" onmouseover="this.src='img/morris1/morris1.jpg';" onmouseout="this.src='img/morris1/morris2.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/morris_carry_u/?hl=zh-tw" target="_blank">點我看更多元智周杰倫</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 李奕鴻<br><strong>綽號</strong> : 元智周杰倫<br><strong>生日</strong> : 2000/07/03<br><strong>血型</strong> : O型<br><strong>星座</strong> : 巨蟹座<br><strong>興趣</strong> : 打球 跟看妹子<br><strong>簡短自我介紹</strong> : <br>大家好我叫李奕鴻 是個大帥哥巨蟹座o型，身高172體重只有40<br>平常與人為善 會扶老太太過馬路 積積陰陰得<br><strong>別人眼中的他</strong> : <br>
                     唱歌好聽的好碰友 幽默，籃球第一強~<br>
                     邊吐邊睡不洗澡 籃球排球壘球都會但還是沒有女朋友 家裡有水晶吊燈的花花公子李狗屌<br>
@@ -155,10 +155,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/nick/nick8.jpg" onmouseover="this.src='img/nick/nick1.jpg';" onmouseout="this.src='img/nick/nick8.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/nick/nick8.jpg" onmouseover="this.src='img/nick/nick1.jpg';" onmouseout="this.src='img/nick/nick8.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/nick5269/?hl=zh-tw" target="_blank">點我看更多Nick</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 李煜城<br><strong>綽號</strong> : Nick<br><strong>生日</strong> : 2000/1/23<br><strong>血型</strong> : A型<br><strong>星座</strong> : 水瓶座<br><strong>興趣</strong> : 籃球、排球、Hip-hop、唱歌、漫畫小說<br><strong>簡短自我介紹</strong> : <br>我高中時是個邊緣人，每天都偏閒的，參加的都是廢社，籃球桌球桌遊社，<br>畢業後也沒人約呢，於是我上大學立志，會常常走出密室，找到一群人一起製作畢製，<br>我也不再跑咖，不常回老家，電腦不再每天嘈雜，為心中的花澆花，<br>心情豁然開朗，交友圈成長，自信心茁壯，參加了系籃系排嘻研社，<br>但我是不吸菸的，把心情都寫成歌，將故事都上了色，在人生場上散發快樂。<br><strong>別人眼中的他</strong> : <br>
                     雙下巴好碰友<br>
                     睡覺打呼No.1 Rap不錯但黑歷史一堆的aka Nick the best<br>
