--- a/boyC.html
+++ b/boyC.html
@@ -49,7 +49,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            text-align: center;
         }
 
         .qq {
@@ -140,10 +140,10 @@
         </div>
 
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/canopy/canopy1.jpg" onmouseover="this.src='img/canopy/canopy2.jpg';" onmouseout="this.src='img/canopy/canopy1.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/canopy/canopy1.jpg" onmouseover="this.src='img/canopy/canopy2.jpg';" onmouseout="this.src='img/canopy/canopy1.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/im_canopy/?hl=zh-tw" target="_blank">點我看更多廖冠</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 廖冠程<br><strong>綽號</strong> : 廖冠<br><strong>生日</strong> : 2000/02/01<br><strong>血型</strong> : B型<br><strong>星座</strong> : 水瓶座<br><strong>興趣</strong> : 唱歌吉他慢跑健身排球追劇看電影睡過頭<br><strong>簡短自我介紹</strong> : <br>資傳系學會攝影啦
                     沒車沒房沒女友啦<br>
                     常幹蠢事好頭痛啦
@@ -170,10 +170,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/zheqi/zheqi4.jpg" onmouseover="this.src='img/zheqi/zheqi1.jpg';" onmouseout="this.src='img/zheqi/zheqi4.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/zheqi/zheqi4.jpg" onmouseover="this.src='img/zheqi/zheqi1.jpg';" onmouseout="this.src='img/zheqi/zheqi4.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/yangzheqi/?hl=zh-tw" target="_blank">點我看更多阿哲</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
 
                 <p class="qq"><strong>姓名</strong> : 楊哲其<br><strong>綽號</strong> : 阿哲<br><strong>生日</strong> : 2000/08/21<br>
                     <strong>血型</strong> : O型<br><strong>星座</strong> : 獅子座<br><strong>興趣</strong> : 打球 彈琴打球 彈琴<br><strong>簡短自我介紹</strong> : <br>哈嘍大家好，我叫哲其，我平常喜歡打打籃球，也很喜歡彈鋼琴，<br>學鋼琴一直是我小時候的夢想，很高興來到教會以後有姐姐願意教我，進到教會還不到一年，<br>就能夠成為教會樂團的kb手，很感謝上帝，也很感謝在信仰生活中常常幫助我的家人，<br>有機會的話希望你們都能認識這份美好的信仰😁<br><strong>別人眼中的他</strong> : <br>
