--- a/girlA.html
+++ b/girlA.html
@@ -48,7 +48,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            text-align: center;
         }
 
         .qq {
@@ -138,10 +138,10 @@
 
         </div>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/dumpling/d2.jpg" onmouseover="this.src='img/dumpling/d1.jpg';" onmouseout="this.src='img/dumpling/d2.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/dumpling/d2.jpg" onmouseover="this.src='img/dumpling/d1.jpg';" onmouseout="this.src='img/dumpling/d2.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/dumpling327/?hl=zh-tw" target="_blank">點我看更多水餃</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 王雲緹<br><strong>綽號</strong> : 水餃 <br><strong>生日</strong> : 2000/03/27<br><strong>血型</strong> : 不知道<br><strong>星座</strong> : 牡羊座<br><strong>興趣</strong> : 跟尻尻亮亮一起玩<br><strong>簡短自我介紹</strong> :<br> 我超級無敵喜歡亮亮，亮亮是我女朋友。<br>我也超級無敵喜歡尻尻，但尻尻不是我女朋友，<br>希望未來的有一天她可以成為我的女朋友。<br><strong>別人眼中的她</strong> :<br>看劇好夥伴 漫畫好碰友<br>
                     很愛笑、很隨和但是有自己的想法不盲從<br>
                     妳94一個腐女 口罩<br>
@@ -158,10 +158,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/chin/chin1.jpg" onmouseover="this.src='img/chin/chin2.jpg';" onmouseout="this.src='img/chin/chin1.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/chin/chin1.jpg" onmouseover="this.src='img/chin/chin2.jpg';" onmouseout="this.src='img/chin/chin1.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/elaine8830/?hl=zh-tw" target="_blank">點我看更多寶ㄓㄣ</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 紀寶嫀<br><strong>綽號</strong> : 寶ㄓㄣ<br><strong>生日</strong> : 1999/10/20<br><strong>血型</strong> : O型<br><strong>星座</strong> : 天秤座<br><strong>興趣</strong> : 耍廢<br><strong>簡短自我介紹</strong> : <br>台中老人 快20 興趣應該是耍廢<br> 打球 看劇 看電影 沒啥專長 每天都很想睡覺跟吃<br><strong>別人眼中的她</strong> :<br>
                     很霸氣、看起來很兇但其實人很好也很有義氣、很勇敢、很有自己的風格<br>
                     看到就會怕的標準執星官<br>
