--- a/girlB.html
+++ b/girlB.html
@@ -48,7 +48,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            text-align: center;
         }
 
         .qq {
@@ -138,10 +138,10 @@
 
         </div>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/li/li2.jpg" onmouseover="this.src='img/li/li1.jpg';" onmouseout="this.src='img/li/li2.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/li/li2.jpg" onmouseover="this.src='img/li/li1.jpg';" onmouseout="this.src='img/li/li2.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/liojz/?hl=zh-tw" target="_blank">點我看更多資傳小祖賢</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 陳禹曆<br><strong>綽號</strong> : 資傳小祖賢<br><strong>生日</strong> : 1999/12/13<br><strong>血型</strong> : A型<br><strong>星座</strong> : 射手座<br><strong>興趣</strong> : 打排球<br><strong>簡短自我介紹</strong> : <br>我是陳禹曆 元智資傳科技組 我有加入系排 和亮亮一起打排球<br> 我住在女宿五樓 2522 C床 麵包節的時候沒人送我麵包 所以我公布我的房號<br> 懂我意思了嗎？我都不讀書 還愛蹺課 甚至游泳課都不去結果體育被當：）<br>但是沒關係 因為我很樂觀 我看得很開 學費都白繳了 但錢再賺就有，對嗎？<br>人生再重來一次就好，對嗎？<br><strong>別人眼中的她</strong> : <br>
                     扣球爆帥的大一先發<br>
                     排球很厲害，有時候會講出與外表不符的可愛的話<br>
@@ -155,10 +155,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/teresia/teresia4.jpg" onmouseover="this.src='img/teresia/teresia6.jpg';" onmouseout="this.src='img/teresia/teresia4.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/teresia/teresia4.jpg" onmouseover="this.src='img/teresia/teresia6.jpg';" onmouseout="this.src='img/teresia/teresia4.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/teresia_130/?hl=zh-tw" target="_blank">點我看更多婉馨</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 賴婉馨<br><strong>綽號</strong> : 婉馨 碗雞<br><strong>生日</strong> : 2000/1/30<br><strong>血型</strong> : O型<br><strong>星座</strong> : 水瓶座<br><strong>興趣</strong> : 看韓劇 聽音樂 看電影<br><strong>簡短自我介紹</strong> : <br>她是個 超級宇宙無敵霹靂可愛的女森，個性超好，<br>人也爆炸好，還很大方，很熱心助人，做報告超罩的，<br>雖然有時候會亂說話，不要生他的氣。她最喜歡防彈，所以要討好她就可以給他看防彈。<br><strong>別人眼中的她</strong> : <br>
                     好室友 合作愉快好碰友<br>
                     很單純也很直率，做任何事情都很認真<br>
