--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+            /*padding-left: 200px;*/
+            text-align: center;
         }
 
         #navbarDropdownMenuLink {
@@ -200,11 +201,11 @@
         </div>
 
         <hr>
-        <div class="row" id="we">
-            <div class="col-5-sm-6"><img src="img/huang/huang3.jpg" class="our" alt=""><br>
+        <div class="row  m-auto" id="we">
+            <div class="col-5-sm-6 m-auto"><img src="img/huang/huang3.jpg" class="our" alt=""><br>
                 <p class="hahaha"><a href="https://www.instagram.com/bring_bring_103/?hl=zh-tw" target="_blank">點我看更多亮亮</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 黃亮庭<br><strong>綽號</strong> : 亮亮<br><strong>生日</strong> : 2000/01/03<br><strong>血型</strong> : B型<br><strong>星座</strong> : 摩羯座<br><strong>興趣</strong> : 打排球 講幹話<br><strong>簡短自我介紹 </strong>:<br> 哈囉，我是亮亮，平常無聊的時候喜歡講一些很沒道理的話，<br> 做事很認真負責，跟不熟的人會尬聊，跟熟的人也會，<br> 因為有時候真的不知道講什麼，<br> 總之我愛大家❤<br><strong>別人眼中的她</strong> : <br>
                     可愛可愛 很好相處 白癡白癡的好碰友<br>
                     很善良、朋友遇到困難時很為朋友著想、很有包容心<br>
@@ -217,10 +218,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/cute/cute2.jpg" class="our" alt=""><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/cute/cute2.jpg" class="our" alt=""><br>
                 <p class="hahaha"><a href="https://www.instagram.com/_890803/?hl=zh-tw" target="_blank">點我看更多尻尻</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 吳育欣<br><strong>綽號</strong> : 尻尻<br><strong>生日</strong> : 2000/08/03<br><strong>血型</strong> : O型<br><strong>星座</strong> : 獅子座<br><strong>興趣</strong> : 打籃球排球唱歌講屁話夢話<br><strong>簡短自我介紹</strong> : <br>我是吳育欣，我的綽號是尻尻，我喜歡打籃球排球，<br>我喜歡說一堆幹話，製造生活的樂趣，叫別人打自我介紹很簡單，<br>實際上自己來打真的很難，我也不知道可以說什麼了，<br>只希望最近可以心情好一點，所有事情都雨過天晴。<br><strong>別人眼中的她</strong> : <br>
                     很獨立、不願意麻煩別人、很會看眼色、滿會提供意見的<br>
                     事業很大男友很多 幽默，很會尬聊~<br>
