--- a/special.html
+++ b/special.html
@@ -48,7 +48,7 @@
         }
 
         .hahaha {
-            padding-left: 200px;
+           text-align: center;
         }
 
         .qq {
@@ -138,10 +138,10 @@
 
         </div>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/chiu/chiu3.jpg" onmouseover="this.src='img/chiu/chiu1.jpg';" onmouseout="this.src='img/chiu/chiu3.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/chiu/chiu3.jpg" onmouseover="this.src='img/chiu/chiu1.jpg';" onmouseout="this.src='img/chiu/chiu3.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/chiuderek_1213/?hl=zh-tw" target="_blank">點我看更多寬鼻</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 邱翊寬<br><strong>綽號</strong> : 寬鼻<br><strong>生日</strong> : 1999/12/13<br><strong>血型</strong> : B型<br><strong>星座</strong> : 射手座<br><strong>興趣</strong> : 唱歌 打嘴砲 耍廢 出去玩<br><strong>簡短自我介紹</strong> :<br> 我叫邱翊寬 但翊其實是打不出來的<br> 身高跟楊子頤一樣 體重跟何信億一樣 喜歡和一群會打嘴砲的人出去玩<br> 討厭一直碎碎念或在我睡覺時吵我的人 對自己的好朋友都很好的<br> 目前最想做的事是跟朋友們一起出國玩<br><strong>別人眼中的他</strong> : <br>
                     好姐妹 打球進步很快好碰友<br>
                     感覺人很好然後話很多（從吳育欣和亮亮那邊聽來的）<br>
@@ -157,10 +157,10 @@
         </div>
         <hr>
         <div class="row">
-            <div class="col-5-sm-6"><img src="img/jean/jean2.jpg" onmouseover="this.src='img/jean/jean1.jpg';" onmouseout="this.src='img/jean/jean2.jpg';" width="300px" class="our"><br>
+            <div class="col-5-sm-6 m-auto"><img src="img/jean/jean2.jpg" onmouseover="this.src='img/jean/jean1.jpg';" onmouseout="this.src='img/jean/jean2.jpg';" width="300px" class="our"><br>
                 <p class="hahaha"><a href="https://www.instagram.com/jean.yang_/?hl=zh-tw" target="_blank">點我看更多阿衿</a></p>
             </div>
-            <div class="col-7-sm-6">
+            <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 楊語衿<br><strong>綽號</strong> : 阿衿<br><strong>生日</strong> : 1999/12/09<br><strong>血型</strong> : 不知道<br><strong>星座</strong> : 射手座<br><strong>興趣</strong> : 打籃球<br><strong>簡短自我介紹</strong> :<br> 我是楊語衿，出生在新竹上小學的時候搬到桃園，<br>然後就一直住在桃園不曾離開了ㄏㄏ。我們家有一隻很可愛的比利時狼犬，<br>他很乖也不會亂咬人，我很喜歡他就像我很喜歡打籃球一樣，<br>希望我的狗狗可以天天開心健健康康的<br><strong>別人眼中的她</strong> : <br>不按牌理出牌總是充滿歡樂與驚喜，以為很難親近但其實很親和的人<br>
                     11點一到就要睡覺的髒寶寶<br>
                     打籃球很帥氣，平常是可愛的阿衿，做作業很認真<br>
