--- a/boyC.html
+++ b/boyC.html
@@ -15,7 +15,7 @@
         }
         #container-fluid {
             /*background-color: floralwhite;*/
-            background-image: url(img/back/back2.jpg);
+            background-image: url(img/back/back4.jpg);
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
@@ -176,7 +176,7 @@
             <div class="col-7-sm-6 m-auto">
 
                 <p class="qq"><strong>姓名</strong> : 楊哲其<br><strong>綽號</strong> : 阿哲<br><strong>生日</strong> : 2000/08/21<br>
-                    <strong>血型</strong> : O型<br><strong>星座</strong> : 獅子座<br><strong>興趣</strong> : 打球 彈琴打球 彈琴<br><strong>簡短自我介紹</strong> : <br>哈嘍大家好，我叫哲其，我平常喜歡打打籃球，也很喜歡彈鋼琴，<br>學鋼琴一直是我小時候的夢想，很高興來到教會以後有姐姐願意教我，進到教會還不到一年，<br>就能夠成為教會樂團的kb手，很感謝上帝，也很感謝在信仰生活中常常幫助我的家人，<br>有機會的話希望你們都能認識這份美好的信仰😁<br><strong>別人眼中的他</strong> : <br>
+                    <strong>血型</strong> : O型<br><strong>星座</strong> : 獅子座<br><strong>興趣</strong> : 打球 彈琴打球 彈琴<br><strong>簡短自我介紹</strong> : <br>哈嘍大家好，我叫哲其，我平常喜歡打打籃球，也很喜歡彈鋼琴，<br>學鋼琴一直是我小時候的夢想，很高興來到教會以後有姐姐願意教<br>我，進到教會還不到一年，就能夠成為教會樂團的kb手，很感謝上<br>帝，也很感謝在信仰生活中常常幫助我的家人，有機會的話希望你<br>們都能認識這份美好的信仰😁<br><strong>別人眼中的他</strong> : <br>
                     好久沒見的好碰友<br>
                     很隨和、也是努力堅強的一個人、讓人很容易對他敞開的人<br>
                     基督男 禱告 心思細膩<br>
