--- a/girlA.html
+++ b/girlA.html
@@ -15,7 +15,7 @@
         }
         #container-fluid {
             /*background-color: floralwhite;*/
-            background-image: url(img/back/back2.jpg);
+            background-image: url(img/back/back4.jpg);
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
@@ -163,7 +163,7 @@
             </div>
             <div class="col-7-sm-6 m-auto">
                 <p class="qq"><strong>姓名</strong> : 紀寶嫀<br><strong>綽號</strong> : 寶ㄓㄣ<br><strong>生日</strong> : 1999/10/20<br><strong>血型</strong> : O型<br><strong>星座</strong> : 天秤座<br><strong>興趣</strong> : 耍廢<br><strong>簡短自我介紹</strong> : <br>台中老人 快20 興趣應該是耍廢<br> 打球 看劇 看電影 沒啥專長 每天都很想睡覺跟吃<br><strong>別人眼中的她</strong> :<br>
-                    很霸氣、看起來很兇但其實人很好也很有義氣、很勇敢、很有自己的風格<br>
+                    霸氣、看起來很兇其實人很好也有義氣、勇敢、有自己的風格<br>
                     看到就會怕的標準執星官<br>
                     室友❤️ 大姐頭，很霸氣，有時候很懶，可是人很大方<br>
                     很好相處的人 喜歡寶嫀❤<br>
