--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             overflow-x: hidden;
         }
         #container-fluid {
-            background-image: url(img/back/102b543001f2bce616314cb58abbac28.jpg);
+            background-image: url(img/back/back4.jpg);
             background-attachment: fixed;
             background-repeat: no-repeat;
             background-size: cover;
